resources/css/index.css
/* ... */
.cert-back {
  width: 100px;
  height: 50px;
  border-radius: 22px;
  margin-top: -7px;
  background-color: #758594;
}
.cert-back a{
  color: black;
  font-size: 1.2rem;
  letter-spacing: 0.2rem;
  font-weight: 600;
}
.cert-heading h3 {
  margin-top: -10px;
  margin-left: 30px;
  text-align: center;
  font-size: clamp(1.5rem, 1.5rem + 3.6vw, 3.3rem);
  font-weight: bold;
  color: moccasin;
}
.cert-bar-top {
  width: auto;
  margin-left: 12px;
  display: flex;
  height: 22px;
  z-index: 1;
}
.bar-top-1, .bar-top-2, .bar-top-3, .bar-top-4, .bar-top-5{
  height: 22px;
  border-right: 5px solid #000;
}
.bar-top-1{
  transition: width 1s;
}
.bar-top-1 {
  margin-left: -15px;
  width: 20%;
  background-color: #5e959a;
  border-radius: 0 0 0 22px;
}
.bar-top-2 {
  width: 92px;
  background-color: #99CDFF;
}
.bar-top-3 {
  width: 30%;
  background-color: #FFFFCB;
}
.bar-top-4 {
  width: 35%;
  background-color: #9D9DFF;
}

.bar-top-5 {
  width: 30%;
  background-color: #99CDFF;
  border-radius: 0 0 22px 0;
  margin-right: auto;
}

.cert-content-box-in{
  width: 100%;
  display: flex;
  margin: 5px auto 0 auto;
  padding: 12px 0;
  background: linear-gradient(#FFFFCB 50%, #99CDFF 50%);
  border-radius: 20px 20px 20px 20px;
  overflow: hidden;
  position: relative;
  z-index: 1;
}
.cert-content-text-in {
  display: flex;
  justify-content: space-around;
  flex: 1;
  margin-left: 2%;
  margin-bottom: 10px;
  height: 130px;
  background-color: #000;
  border-radius: 20px 20px 20px 20px;
  padding: 1.5rem 1rem;
  z-index: 2;
}

.buttons{
  display: inline;
  width: 90%;
  margin-left: auto;
  margin-right: auto;
  margin-top: -10px;

}
.CC, .QC, .BM{
  width: 210px;
  height: 50px;
  border-radius: 20px;
  font-size: 1.4rem;
  margin: 1px 70px;
  color: black;
  letter-spacing: 0.1rem;
  font-weight: 600;
}
.CC{
  background-color:#FFFF33 ;
  
}
.QC {
  background-color: #D05F5F;
}
.BM {
  background-color:#FF99CD ;
}
.cert-content-panel1 {
  max-width: 200px;
  height: 100px;
  margin: auto;
  padding: 10px 0 0 1%;
  background-color: #9D9DFF;
  border-top: 5px solid #000;
  border-bottom: 5px solid #000;
  font-size: .99rem;
  font-weight: bold;
  color: #000;
}
.cert-content-panel1 p{
  margin-right: 10px;
  text-align: center;
}
.cert-content-box-bottom{
  width: 100%;
  display: flex;
  margin: 5px auto 0 auto;
  padding: 12px 0;
  background: linear-gradient(#FFCF7B 50%, #9D9DFF 50%);
  border-radius: 20px 20px 20px 20px;
  overflow: hidden;
  position: relative;
  z-index: 1;
}
.cert-content-text-bottom {
  flex: 1;
  margin-left: 2%;
  margin-bottom: 10px;
  height: 640px;
  background-color: #000;
  border-radius: 20px 20px 20px 20px;
  padding: 1.5rem 1rem;
  z-index: 2;
}
.cert-content-box-bottom h1 {
  margin-top: -20px;
  text-align: center;
  font-size: clamp(1.5rem, 1.5rem + 3.6vw, 3.3rem);
  font-weight: bold;
  color: moccasin;
}
.cert-content-panel2 {
  max-width: 200px;
  height: 100px;
  margin: auto;
  padding: 10px 0 0 1%;
  background-color: #758594;
  border-top: 5px solid #000;
  border-bottom: 5px solid #000;
  font-size: .99rem;
  font-weight: bold;
  color: #000;
}
.cert-content-panel2 p{
  margin-right: 10px;
  text-align: center;
}
.cert-slides{
  max-width: 1000px;
  position: relative;
  margin-top: -40px;
  margin-left: auto;
  margin-right: auto;
}
.cert-slides h2 {
  color: #FFFFCB;
}
.mySlides img {
  width: 80%;
}
.mySlides1 img {
  width: 45%;
}
.mySlides2 img {
  width: 45%;
}

.fade {
  /*animation-name: fade;*/
  /*animation-duration: 2.5s;*/
  animation: fade 10s linear forwards;
  opacity: 0;
}

@keyframes fade {
  0% {opacity: 1; }
  25% {opacity: 1; }
  50% {opacity: 1; }
  75% {opacity: 1; }
  100% {opacity: 1 ;}

  /*from {opacity: .5} 
  to {opacity: 1}*/
}
/* Hide the images by default */
.mySlides, .mySlides1, .mySlides2, .mySlides3 {
  display: none;
  z-index: 1;
}
@media (max-width: 1200px) {
  .cert-box-back {
    height: 1800px;
  }
  .cert-content-inside{
    height: 1600px;
  }
  .cert-content-text-bottom {
    height: 1200px;
  }
  .cert-content-panel, .cert-content-panel1, .cert-content-panel2 {
    width: 180px;
    font-size: 1.3rem;
  }
  .mySlides img {
    width: 100%;
  }
  .mySlides1 img {
    width: 100%;
  }
  .mySlides2 img {
    width: 100%;
  }
 }


/*/////////////////////////////////////////////////////////////////////////////*/

/* Portfolio Box*/
.port-box-back {
  margin-top: 0;
  margin-left: auto;
  margin-right: auto;
  background-color: #000;
  width: 100%;
  height: 1170px;
  background-repeat: no-repeat; 
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  z-index: 0;
}
.port-content-box{
  width: 95%;
  display: flex;
  margin: 30px auto 30px auto;
  padding: 12px 0;
  background: linear-gradient(#454f59 50%, #6b6954 50%);
  border-radius: 20px 20px 20px 20px;
  overflow: hidden;
  position: relative;
  z-index: 1;
}

.port-content-panel {
  max-width: 200px;
  height: 100px;
  margin: auto;
  padding: 10px 0 0 1%;
  background-color: #8c8b85;
  border-top: 5px solid #000;
  border-bottom: 5px solid #000;
  font-size: .99rem;
  font-weight: bold;
  color: #000;
}
.port-content-panel p{
  margin-right: 10px;
  text-align: center;
}

.port-content-inside {
  flex: 1;
  margin-left: 2%;
  height: 1050px;
  background-color: #000;
  border-radius: 20px 20px 20px 20px;
  padding: 1.5rem 1rem;
  z-index: 2;
}

.port-content-text {
  width:70%;
  float: left;
  display: flex;
  flex-direction: column;
  min-height: 146px;
  align-items: center;
  justify-content: center;
  gap: 20px;
  text-align: center;
  font-size: 1.2rem;
  color: #0a0a09;
}
.port-banner-box{
  width: 100%;
  display: flex;
  margin: -20px 2px 0 -4px;
  padding: 12px 0;
  background: linear-gradient(#53718f 50%, #5e959a 50%);
  border-radius: 20px 20px 0 0;
  overflow: hidden;
  position: relative;
  z-index: 1;
}
/* ... */

